--- a/NLP/whisper_token.ipynb
+++ b/NLP/whisper_token.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "Transcripción agregada a 'transcriptions.csv':\n",
-      " Estamos un pouco viejas e o que hacemos é sair a tomar café. Pero antes solíamos hacer máas actividades como ir a jugar a palas, é un deporte típico Vasco, o ir a jugar a fútbol, o hacer actividades así deportivas.\n"
+      " Hello, my name is Romain and my favorite day of the week is Monday because from 8 to 9.50 we have PE, then we have a 15 minute break, then we have PE again from 10.00 5.00 to 11.00. It is so fun. After that from 11.00 to 11.55 we have music, then we have lunch from 11.55 to 1.10. After lunch from 1.10 to 2.5 we have French and to finish off the day we have Spanish. I also like Wednesdays because from 1.10 to 2.5 we have art that is one of my very favorite classes. I don't really like Tuesdays because there isn't any of my favorite classes and we have to start the day off with math. Thank you for listening. Bye!\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
     "model = whisper.load_model(\"small\")  # Puedes cambiar el tamaño del modelo\n",
     "\n",
     "# Ruta del archivo de audio (modifica con tu archivo)\n",
-    "audio_path = \"audio_test_2.mp3\"  # Puede ser .mp3, .wav, .m4a, .ogg, etc.\n",
+    "audio_path = \"audio_test.mp3\"  # Puede ser .mp3, .wav, .m4a, .ogg, etc.\n",
     "\n",
     "# Transcribir el audio\n",
     "result = model.transcribe(audio_path)\n",
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Estamos', 'un', 'pouco', 'viejas', 'e', 'o', 'que', 'hacemos', 'é', 'sair', 'a', 'tomar', 'café', '.', 'Pero', 'antes', 'solíamos', 'hacer', 'máas', 'actividades', 'como', 'ir', 'a', 'jugar', 'a', 'palas', ',', 'é', 'un', 'deporte', 'típico', 'Vasco', ',', 'o', 'ir', 'a', 'jugar', 'a', 'fútbol', ',', 'o', 'hacer', 'actividades', 'así', 'deportivas', '.']\n"
+      "['Hello', ',', 'my', 'name', 'is', 'Romain', 'and', 'my', 'favorite', 'day', 'of', 'the', 'week', 'is', 'Monday', 'because', 'from', '8', 'to', '9.50', 'we', 'have', 'PE', ',', 'then', 'we', 'have', 'a', '15', 'minute', 'break', ',', 'then', 'we', 'have', 'PE', 'again', 'from', '10.00', '5.00', 'to', '11.00', '.', 'It', 'is', 'so', 'fun', '.', 'After', 'that', 'from', '11.00', 'to', '11.55', 'we', 'have', 'music', ',', 'then', 'we', 'have', 'lunch', 'from', '11.55', 'to', '1.10', '.', 'After', 'lunch', 'from', '1.10', 'to', '2.5', 'we', 'have', 'French', 'and', 'to', 'finish', 'off', 'the', 'day', 'we', 'have', 'Spanish', '.', 'I', 'also', 'like', 'Wednesdays', 'because', 'from', '1.10', 'to', '2.5', 'we', 'have', 'art', 'that', 'is', 'one', 'of', 'my', 'very', 'favorite', 'classes', '.', 'I', 'do', \"n't\", 'really', 'like', 'Tuesdays', 'because', 'there', 'is', \"n't\", 'any', 'of', 'my', 'favorite', 'classes', 'and', 'we', 'have', 'to', 'start', 'the', 'day', 'off', 'with', 'math', '.', 'Thank', 'you', 'for', 'listening', '.', 'Bye', '!']\n"
      ]
     }
    ],
@@ -97,6 +97,31 @@
     "    print(tokens)\n",
     "else:\n",
     "    print(\"The CSV file is empty or does not contain the 'Texto' column.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'neg': 0.0, 'neu': 0.845, 'pos': 0.155, 'compound': 0.964}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#We realize sentiment analysis from the tokenized text\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
+    "# Initialize the sentiment intensity analyzer\n",
+    "sia = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "# Get the sentiment score\n",
+    "sentiment_score = sia.polarity_scores(text)\n",
+    "print(sentiment_score)\n"
    ]
   }
  ],
