--- a/NLP/whisper_token.ipynb
+++ b/NLP/whisper_token.ipynb
@@ -220,7 +220,9 @@
     "\n",
     "# Mostramos las entidades detectadas\n",
     "for entidad in entidades:\n",
-    "    print(f\"- {entidad['word']} → {entidad['entity_group']} (score: {entidad['score']:.2f})\")\n"
+    "    print(f\"- {entidad['word']} → {entidad['entity_group']} (score: {entidad['score']:.2f})\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
