se crea una carpeta para gestionar cambios finales de NLP y Sistemas Inteligentes

--- a/NLP/whisper_token.ipynb
+++ b/NLP/whisper_token.ipynb
@@ -184,6 +184,92 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/carlosillanaldariz/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inicio: None\n",
+      "Destino: Madrid\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import RobertaTokenizerFast, RobertaForTokenClassification\n",
+    "import torch\n",
+    "\n",
+    "# Cargar el modelo y el tokenizador\n",
+    "model_name = \"AventIQ-AI/roberta-named-entity-recognition\"\n",
+    "tokenizer = RobertaTokenizerFast.from_pretrained(model_name)\n",
+    "model = RobertaForTokenClassification.from_pretrained(model_name)\n",
+    "\n",
+    "# Etiquetas del modelo\n",
+    "label_list = [\"O\", \"B-PER\", \"I-PER\", \"B-ORG\", \"I-ORG\", \"B-LOC\", \"I-LOC\", \"B-MISC\", \"I-MISC\"]\n",
+    "\n",
+    "def extract_cities(text):\n",
+    "    # Tokenizar el texto\n",
+    "    tokens = tokenizer(text, return_tensors=\"pt\", truncation=True)\n",
+    "    \n",
+    "    # Obtener las predicciones del modelo\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**tokens)\n",
+    "    \n",
+    "    predictions = torch.argmax(outputs.logits, dim=2)\n",
+    "    \n",
+    "    # Convertir las predicciones en etiquetas y tokens\n",
+    "    tokens_list = tokenizer.convert_ids_to_tokens(tokens[\"input_ids\"][0])\n",
+    "    predicted_labels = [label_list[pred] for pred in predictions[0].numpy()]\n",
+    "    \n",
+    "    # Extraer las ciudades reconocidas\n",
+    "    cities = []\n",
+    "    current_city = []\n",
+    "    for token, label in zip(tokens_list, predicted_labels):\n",
+    "        if label == \"B-LOC\":\n",
+    "            if current_city:\n",
+    "                cities.append(\"\".join(current_city).replace(\"Ġ\", \" \").strip())\n",
+    "                current_city = []\n",
+    "            current_city.append(token)\n",
+    "        elif label == \"I-LOC\" and current_city:\n",
+    "            current_city.append(token)\n",
+    "        else:\n",
+    "            if current_city:\n",
+    "                cities.append(\"\".join(current_city).replace(\"Ġ\", \" \").strip())\n",
+    "                current_city = []\n",
+    "    if current_city:\n",
+    "        cities.append(\"\".join(current_city).replace(\"Ġ\", \" \").strip())\n",
+    "    \n",
+    "    return cities\n",
+    "\n",
+    "# Texto de ejemplo\n",
+    "texto = \"Me gustaría viajar desde Madrid hasta Barcelona pasando por Zaragoza.\"\n",
+    "\n",
+    "# Extraer ciudades del texto\n",
+    "ciudades_mencionadas = extract_cities(texto)\n",
+    "\n",
+    "# Asignar las ciudades a las variables 'inicio' y 'destino'\n",
+    "inicio = destino = None\n",
+    "if len(ciudades_mencionadas) == 1:\n",
+    "    destino = ciudades_mencionadas[0]\n",
+    "elif len(ciudades_mencionadas) >= 2:\n",
+    "    inicio = ciudades_mencionadas[0]\n",
+    "    destino = ciudades_mencionadas[1]\n",
+    "\n",
+    "print(\"Inicio:\", inicio)\n",
+    "print(\"Destino:\", destino)\n"
+   ]
   }
  ],
  "metadata": {
