--- a/NLP_IntSys/notebook_final.ipynb
+++ b/NLP_IntSys/notebook_final.ipynb
@@ -253,6 +253,252 @@
     "print(\"Inicio:\", inicio)\n",
     "print(\"Destino:\", destino)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sistemas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grafo = 'nuevo_graf.txt'\n",
+    "\n",
+    "inicio = 'Ribadeo'\n",
+    "destino = 'Verin'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Cargar datos del archivo\n",
+    "def cargar_mapa(path):\n",
+    "    with open(path, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "\n",
+    "    nodos = {}\n",
+    "    aristas = []\n",
+    "    leyendo_nodos = False\n",
+    "    leyendo_aristas = False\n",
+    "\n",
+    "    for line in lines:\n",
+    "        line = line.strip()\n",
+    "        if not line or line.startswith(\"#\"):\n",
+    "            if \"Nodos\" in line:\n",
+    "                leyendo_nodos = True\n",
+    "                leyendo_aristas = False\n",
+    "            elif \"Aristas\" in line:\n",
+    "                leyendo_aristas = True\n",
+    "                leyendo_nodos = False\n",
+    "            continue\n",
+    "\n",
+    "        if leyendo_nodos:\n",
+    "            ciudad, lat, lon = line.split(',')\n",
+    "            nodos[ciudad] = (float(lat), float(lon))\n",
+    "        elif leyendo_aristas:\n",
+    "            origen, destino, distancia = line.split(',')\n",
+    "            aristas.append((origen, destino, float(distancia)))  # <-- CAMBIO AQUÍ\n",
+    "\n",
+    "    return nodos, aristas\n",
+    "\n",
+    "# Crear y visualizar el grafo\n",
+    "def visualizar_mapa(path):\n",
+    "    nodos, aristas = cargar_mapa(path)\n",
+    "    \n",
+    "    G = nx.Graph()\n",
+    "\n",
+    "    # Añadir nodos con posición geográfica\n",
+    "    for ciudad, (lat, lon) in nodos.items():\n",
+    "        G.add_node(ciudad, pos=(lon, lat))  # Nota: X = longitud, Y = latitud\n",
+    "\n",
+    "    # Añadir aristas con distancia\n",
+    "    for origen, destino, distancia in aristas:\n",
+    "        G.add_edge(origen, destino, weight=distancia)\n",
+    "\n",
+    "    pos = nx.get_node_attributes(G, 'pos')\n",
+    "    labels = nx.get_edge_attributes(G, 'weight')\n",
+    "\n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "    nx.draw_networkx_nodes(G, pos, node_size=300, node_color='skyblue')\n",
+    "    nx.draw_networkx_edges(G, pos, width=1.5, alpha=0.7)\n",
+    "    nx.draw_networkx_labels(G, pos, font_size=9)\n",
+    "    nx.draw_networkx_edge_labels(G, pos, edge_labels=labels, font_size=7)\n",
+    "\n",
+    "    plt.title(\"Galicia Map - Cities, Distances and Connections\")\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "# Ruta al archivo de texto\n",
+    "visualizar_mapa(grafo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import heapq\n",
+    "import time\n",
+    "\n",
+    "# Calcular distancia Haversine entre coordenadas\n",
+    "def haversine(coord1, coord2):\n",
+    "    R = 6371\n",
+    "    lat1, lon1 = map(math.radians, coord1)\n",
+    "    lat2, lon2 = map(math.radians, coord2)\n",
+    "    dlat = lat2 - lat1\n",
+    "    dlon = lon2 - lon1\n",
+    "    a = math.sin(dlat/2)**2 + math.cos(lat1)*math.cos(lat2)*math.sin(dlon/2)**2\n",
+    "    c = 2 * math.atan2(math.sqrt(a), math.sqrt(1-a))\n",
+    "    return R * c\n",
+    "\n",
+    "# Leer nodos y aristas del archivo\n",
+    "def load_graph(file_path):\n",
+    "    nodes = {}\n",
+    "    graph = {}\n",
+    "    with open(file_path, \"r\") as f:\n",
+    "        lines = f.readlines()\n",
+    "\n",
+    "    i = 0\n",
+    "    while i < len(lines) and not lines[i].startswith(\"# Aristas\"):\n",
+    "        if not lines[i].startswith(\"#\") and lines[i].strip():\n",
+    "            city, lat, lon = lines[i].strip().split(\",\")\n",
+    "            nodes[city] = (float(lat), float(lon))\n",
+    "            graph[city] = {}\n",
+    "        i += 1\n",
+    "\n",
+    "    while i < len(lines):\n",
+    "        if not lines[i].startswith(\"#\") and lines[i].strip():\n",
+    "            parts = lines[i].strip().split(\",\")\n",
+    "            if len(parts) == 3:\n",
+    "                city1, city2, dist = parts\n",
+    "                dist = float(dist)\n",
+    "                graph[city1][city2] = dist\n",
+    "                graph[city2][city1] = dist\n",
+    "        i += 1\n",
+    "\n",
+    "    return nodes, graph\n",
+    "\n",
+    "# Algoritmo Greedy Best-First Search\n",
+    "def greedy_best_first(graph, nodes, start, goal):\n",
+    "    visited = set()\n",
+    "    queue = []\n",
+    "    heapq.heappush(queue, (haversine(nodes[start], nodes[goal]), 0, start, [start]))\n",
+    "\n",
+    "    while queue:\n",
+    "        heuristic_dist, path_dist, current, path = heapq.heappop(queue)\n",
+    "\n",
+    "        if current == goal:\n",
+    "            return path, path_dist\n",
+    "\n",
+    "        if current in visited:\n",
+    "            continue\n",
+    "        visited.add(current)\n",
+    "\n",
+    "        for neighbor in graph[current]:\n",
+    "            if neighbor not in visited:\n",
+    "                new_path = path + [neighbor]\n",
+    "                new_cost = path_dist + graph[current][neighbor]\n",
+    "                heuristic = haversine(nodes[neighbor], nodes[goal])\n",
+    "                heapq.heappush(queue, (heuristic, new_cost, neighbor, new_path))\n",
+    "\n",
+    "    return [], float('inf')  # Si no hay camino\n",
+    "\n",
+    "# MAIN\n",
+    "if __name__ == \"__main__\":\n",
+    "    file_path = grafo\n",
+    "    nodes, graph = load_graph(file_path)\n",
+    "\n",
+    "    start_city = inicio\n",
+    "    end_city = destino\n",
+    "\n",
+    "    if start_city not in nodes or end_city not in nodes:\n",
+    "        print(\"Ciudad de inicio o fin no válida.\")\n",
+    "    else:\n",
+    "        start_time = time.time()\n",
+    "        path, total_dist = greedy_best_first(graph, nodes, start_city, end_city)\n",
+    "        end_time = time.time()\n",
+    "\n",
+    "        if path:\n",
+    "            print(\"Best route found:\", \" -> \".join(path))\n",
+    "            print(f\"Total distance: {total_dist:.2f} km\")\n",
+    "        else:\n",
+    "            print(\"No se encontró un camino.\")\n",
+    "        print(\"Execution time:\", round(end_time - start_time, 4), \"seconds\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def visualizar_ruta(path_archivo, ruta=None):\n",
+    "    nodos, aristas = cargar_mapa(path_archivo)\n",
+    "\n",
+    "    G = nx.Graph()\n",
+    "\n",
+    "    for ciudad, (lat, lon) in nodos.items():\n",
+    "        G.add_node(ciudad, pos=(lon, lat))\n",
+    "\n",
+    "    for origen, destino, distancia in aristas:\n",
+    "        G.add_edge(origen, destino, weight=distancia)\n",
+    "\n",
+    "    pos = nx.get_node_attributes(G, 'pos')\n",
+    "    labels = nx.get_edge_attributes(G, 'weight')\n",
+    "\n",
+    "    # Colores de los nodos\n",
+    "    node_colors = []\n",
+    "    for nodo in G.nodes():\n",
+    "        if ruta and nodo in ruta:\n",
+    "            node_colors.append('red')\n",
+    "        else:\n",
+    "            node_colors.append('skyblue')\n",
+    "\n",
+    "    # Aristas que están en la ruta (pares consecutivos)\n",
+    "    ruta_edges = []\n",
+    "    if ruta:\n",
+    "        ruta_edges = [(ruta[i], ruta[i+1]) for i in range(len(ruta)-1)]\n",
+    "\n",
+    "    # Dibujar nodos y etiquetas\n",
+    "    plt.figure(figsize=(12, 10))\n",
+    "    nx.draw_networkx_nodes(G, pos, node_size=300, node_color=node_colors)\n",
+    "    nx.draw_networkx_labels(G, pos, font_size=9)\n",
+    "\n",
+    "    # Dibujar aristas\n",
+    "    edge_colors = []\n",
+    "    for edge in G.edges():\n",
+    "        if edge in ruta_edges or (edge[1], edge[0]) in ruta_edges:\n",
+    "            edge_colors.append('red')\n",
+    "        else:\n",
+    "            edge_colors.append('gray')\n",
+    "\n",
+    "    nx.draw_networkx_edges(G, pos, width=1.5, alpha=0.7, edge_color=edge_colors)\n",
+    "    nx.draw_networkx_edge_labels(G, pos, edge_labels=labels, font_size=7)\n",
+    "\n",
+    "    plt.title(\"Ideal route in red\")\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "# Ejemplo de uso\n",
+    "visualizar_ruta(grafo, ruta=path)\n"
+   ]
   }
  ],
  "metadata": {
