--- a/NLP_IntSys/notebook_final.ipynb
+++ b/NLP_IntSys/notebook_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,13 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/carlosillanaldariz/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Device set to use mps:0\n"
      ]
     },
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +423,7 @@
      "text": [
       "Best route found: Ribadeo -> Viveiro -> Ortigueira -> Ferrol -> A_Coruna -> Santiago -> Pontevedra -> Vigo -> Porrino\n",
       "Total distance: 367.00 km\n",
-      "Execution time: 0.0002 seconds\n"
+      "Execution time: 0.0001 seconds\n"
      ]
     }
    ],
@@ -519,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
