comentarios en el codigo

--- a/NLP_IntSys/notebook_final.ipynb
+++ b/NLP_IntSys/notebook_final.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,8 +92,8 @@
     "\n",
     "# Tokenize the last entry in the 'Texto' column\n",
     "if not df.empty and 'Texto' in df.columns:\n",
-    "    text = df['Texto'].iloc[-1]  # Get the last entry\n",
-    "    tokens = nltk.word_tokenize(str(text))  # Convert to string in case of NaN\n",
+    "    text = df['Texto'].iloc[-1]  \n",
+    "    tokens = nltk.word_tokenize(str(text))  \n",
     "    print(tokens)\n",
     "else:\n",
     "    print(\"The CSV file is empty or does not contain the 'Texto' column.\")\n"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
    ],
    "source": [
     "import os\n",
-    "os.environ[\"TRANSFORMERS_NO_TF\"] = \"1\"  # Evita que use TensorFlow\n",
+    "os.environ[\"TRANSFORMERS_NO_TF\"] = \"1\"  \n",
     "\n",
     "from transformers import pipeline\n",
     "\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
     "\n",
     "\n",
     "# Asignar variables inicio y destino\n",
-    "ciudades_mencionadas = extract_cities(texto)  # Asegúrate de definir la variable 'texto' antes\n",
+    "ciudades_mencionadas = extract_cities(texto)  \n",
     "\n",
     "inicio = destino = None\n",
     "if len(ciudades_mencionadas) == 1:\n",
@@ -316,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sistemas"
+    "## Intelligent Systems"
    ]
   },
   {
