modificaciones minimas en comentarios

--- a/NLP_IntSys/notebook_final.ipynb
+++ b/NLP_IntSys/notebook_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     "import os\n",
     "\n",
     "# Cargar modelo de Whisper (elige \"tiny\", \"base\", \"small\", \"medium\" o \"large\")\n",
-    "model = whisper.load_model(\"small\")  # Puedes cambiar el tamaño del modelo\n",
+    "model = whisper.load_model(\"small\")  \n",
     "\n",
     "# Ruta del archivo de audio (modifica con tu archivo)\n",
     "audio_path = \"Ribadeo_Porrino.mp3\"  # Puede ser .mp3, .wav, .m4a, .ogg, etc.\n",
