--- a/Sig_detect/sign_det.ipynb
+++ b/Sig_detect/sign_det.ipynb
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "dd46de72",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
     "# Mostrar imagen con matplotlib\n",
     "plt.figure(figsize=(10, 8))\n",
     "plt.imshow(img_rgb)\n",
-    "plt.title(f\"Detección de peatones en: {image_path.name}\")\n",
+    "plt.title(f\"Detección de señales en: {image_path.name}\")\n",
     "plt.axis(\"off\")\n",
     "plt.show()\n"
    ]
